tests/NormalTests/paczka1/small_fuzzy/77946595.err
Error in line 1: Ieib56 A671 86,5
Error in line 3: humUSl2 S677 93,3
